# rdkNativeScript

./: CHANGELOG.md  CMakeLists.txt  ChangeLog.md  LICENSE  NOTICE  README.md  run_JSRT.sh
.github/: CODEOWNERS
.github/workflows/: fossid_integration_stateless_diffscan_target_repo.yml  jsruntime_L1tests.yml  jsruntime_L2tests.yml  jsruntime_L2tests_dev.yml  native-full-build.yml
docs/: README.md
include/: EssosInstance.h  IExternalApplicationHandler.h  IJavaScriptContext.h  IJavaScriptEngine.h  InspectorHTTPServer.h  JSRuntimeClient.h  JSRuntimeContainer.h  JSRuntimeServer.h  JavaScriptContextBase.h  KeyListener.h  ModuleSettings.h  NativeJSLogger.h  NativeJSRenderer.h  TimeUtils.h  rtWebSocket.h  rtWebSocketClient.h  rtWebSocketServer.h
include/jsc/: IPlayerEventDataHandler.h  JavaScriptContext.h  JavaScriptEngine.h  JavaScriptUtils.h  JavaScriptWrapper.h  PlayerEventHandler.h  PlayerEventPropsHandler.h  PlayerWrapper.h  rtScriptJSCPrivate.h
include/jsc/jsc_lib/: jsc_lib.h
include/linux/: KeyInput.h
include/quickjs/: JSPlayer.h  JSWebSocket.h  JavaScriptContext.h  JavaScriptEngine.h  JavaScriptUtils.h
sampleapps/testapp_RDKNativescript/: exports.sh  steps.txt  thunder.js  url_selector.js  video.html
sampleapps/testapp_RDKNativescript/players/: player1.js  player2.js  player3.js  player4.js  player5.js
src/: EssosInstance.cpp  InspectorHTTPServer.cpp  JSRuntimeClient.cpp  JSRuntimeClientContainer.cpp  JSRuntimeContainer.cpp  JSRuntimeLauncher.cpp  JSRuntimeServer.cpp  JavaScriptContextBase.cpp  ModuleSettings.cpp  NativeJSLogger.cpp  NativeJSRenderer.cpp  TimeUtils.cpp  c.cpp  jsruntime.cpp  rtWebSocket.cpp  rtWebSocketClient.cpp  rtWebSocketServer.cpp
src/jsc/: JavaScriptContext.cpp  JavaScriptEngine.cpp  JavaScriptUtils.cpp  JavaScriptWrapper.cpp  PlayerEventHandler.cpp  PlayerEventPropsHandler.cpp  PlayerWrapper.cpp  include.cmake  jsc_lib.cpp  rtScriptJSCPrivate.cpp
src/jsc/examples/: hello.js  hello.wasm  test.js  test.wasm
src/jsc/jsc_lib/: COPYING  COPYING.LGPL  include.cmake  jsc_lib.cpp  jsc_lib.h
src/jsc/modules/: event.js  linkedjsdom.js  linkedjsdom_minified.js  linkedjsdomwrapper.js  minified_linkedjsdom.js  node-fetch.js  url.js  video.js  window_minified.js  windowwrapper.js  wsenhanced.js
src/jsc/modules/extra_modules/: LICENSE  window.js
src/jsc/modules/lib/: URL.js  URLSearchParams.js  encoding.js  percent-encoding.js  url-state-machine.js  urlencoded.js
src/linux/: KeyInput.cpp
src/quickjs/: JSHttp.cpp  JSPlayer.cpp  JSWebSocket.cpp  JavaScriptContext.cpp  JavaScriptEngine.cpp  JavaScriptUtils.cpp  include.cmake
src/quickjs/modules/: init.js  timers.js  ws.js
utils/: buffer.js  http.js  https.js  nativejsinspector.html  process.js  punycode.js  thunderJS.js  utils.js  webbridgesdk.js  window.js  ws.js  xhr.js
